Bug 170143 - Some UI text color is influenced by the Windows appearance settings
Summary: Some UI text color is influenced by the Windows appearance settings
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
25.8.0.4 release
Hardware: All Windows (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:26.8.0 target:26.2.1.2 target:...
Keywords:
Depends on:
Blocks: UI-Theming LibreOffice-Themes
  Show dependency treegraph
 
Reported: 2025-12-27 15:02 UTC by Mihai Vasiliu
Modified: 2026-03-29 09:04 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Styles panel (16.75 KB, image/png)
2025-12-27 15:06 UTC, Mihai Vasiliu
Details
Status bar text (7.65 KB, image/png)
2025-12-27 15:06 UTC, Mihai Vasiliu
Details
Toolbar style and font dropdowns (10.90 KB, image/png)
2026-01-28 18:50 UTC, Mihai Vasiliu
Details
Properties pane style and font dropdown (14.91 KB, image/png)
2026-01-28 18:52 UTC, Mihai Vasiliu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mihai Vasiliu 2025-12-27 15:02:52 UTC
Description:
The text color in the Status bar, themes panel and other places is influenced by the Windows Light/Dark appearance settings, rather than by the LibreOffice theme used, resulting in unreadable text.

Steps to Reproduce:
0. Set Windows Appearance mode to Light
1. Enable application theming from LO Appearance settings and choose a dark theme, for example Office 2003 Dark Blue Theme
2. Restart LibreOffice
3. Create a new Writer or Calc document.

Actual Results:
Observe the color of the text in the status bar: Dark text on dark background.
Observe the color in the styles panel (in Writer): Dark text on dark background.

Expected Results:
The color should respect the theme, and have a high contrast, in this case, white  or whatever the theme creator chooses.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.4.2 (X86_64)
Build ID: 290daaa01b999472f0c7a3890eb6a550fd74c6df
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded
Comment 1 Mihai Vasiliu 2025-12-27 15:06:02 UTC
Created attachment 204820 [details]
Styles panel
Comment 2 Mihai Vasiliu 2025-12-27 15:06:13 UTC
Created attachment 204821 [details]
Status bar text
Comment 3 Mihai Vasiliu 2025-12-27 15:06:43 UTC
This was reported in comments on themes: https://extensions.libreoffice.org/en/extensions/show/99416#comment-5146
Comment 4 Mihai Vasiliu 2025-12-27 15:50:56 UTC
Reproducible also in 

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 792fca692594a642762c8ea62581d43fb56300d4
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded

Let's discuss this and find a proper solution, we should not have another release with this bug...
Comment 5 V Stuart Foote 2025-12-28 12:36:21 UTC
Confirmed with STR.

Win11 DWM in Light color sense, LO Tools -> Options -> Appearance 'Enable application theming' checked and the "Office 2003 Dark blue" appearance theme selected active.

FG text on the 'Status' bar, and FG text of the Sidebar's 'Styles' deck do not follow the style and receive a low contrast dark on dark (black on grey) coloring.

Selecting a different Dark appearance theme "Dark Gray" results in an even lower contrast dark on dark for the FG text in those elements.

=-testing-=

20251226 TB103 nightly
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 28; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 6 Heiko Tietze 2026-01-12 11:59:18 UTC
(In reply to Mihai Vasiliu from comment #0)
> Status bar, themes panel and other places...
What other places?
Comment 7 Mihai Vasiliu 2026-01-12 12:39:37 UTC
(In reply to Heiko Tietze from comment #6)
> (In reply to Mihai Vasiliu from comment #0)
> > Status bar, themes panel and other places...
> What other places?

Here is a list of known places in Writer:
- Status bar
- Themes panel list
- Manage Changes panel tabs and list header
- Options Dialog -> Fonts list header
- Options Dialog -> Security buttons text
- Options Dialog -> Appearance buttons text
- Insert -> Envelope buttons text
- Tools -> Spelling buttons text
- Table -> Properties Spelling buttons text
Comment 8 Commit Notification 2026-01-13 10:38:57 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c7a29af1d77c4e1483154b262c7c621067cd2685

Related tdf#170143 - Statusbar text color should consider themed colors

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2026-01-28 06:26:11 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8855e318f81651f7aff33cf12d27a37b4abe87fa

Related tdf#170143 - Stylist text color should consider themed colors

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Mihai Vasiliu 2026-01-28 10:29:41 UTC
Confirmed fixed with all of my themes in the following areas:

- Status bar
- Themes panel list

Not fixed in:

- Manage Changes panel tabs and list header
- Options Dialog -> Fonts list header
- Options Dialog -> Security buttons text
- Options Dialog -> Appearance buttons text
- Insert -> Envelope buttons text
- Tools -> Spelling buttons text
- Table -> Properties Spelling buttons text

Tested on:

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: fde80f0497f89c18ac3d74f181ead958d9d1314a
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded
Comment 11 Heiko Tietze 2026-01-28 11:15:41 UTC
This last patch should do the trick.
Comment 12 Commit Notification 2026-01-28 11:15:49 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5c723785d4cf512bba0591a5328f2a9784b82bc2

Resolves tdf#170143 - Set ButtonTextColor on theme change

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Mihai Vasiliu 2026-01-28 18:44:21 UTC
Reopen this because I also found out the Writer dropdowns for font and paragraph style exibit the same issue and they are basically the same bug.
Comment 14 Mihai Vasiliu 2026-01-28 18:50:06 UTC
Created attachment 205235 [details]
Toolbar style and font dropdowns
Comment 15 Mihai Vasiliu 2026-01-28 18:52:40 UTC
Created attachment 205236 [details]
Properties pane style and font dropdown
Comment 16 Commit Notification 2026-01-30 02:13:23 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/0635321785aabc915e715d1fc1b958664ee05eaf

Resolves tdf#170143 - Set ButtonTextColor on theme change

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 17 Commit Notification 2026-02-03 15:48:07 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7e0c4230e8e854adc4d85d195af0ed683ee210bb

Resolves tdf#170143 - Set ButtonTextColor on theme change (macOS)

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 V Stuart Foote 2026-02-08 23:21:09 UTC
@Mihai, just went through the full list from comment 7 both os/DE color sense in Light or in Dark, with Appearance theme activated either a light or a dark appearance theme fully applies and the buttons in all the listed panels are readable.  Anywhere else, or can this be closed => Fixed
Comment 19 V Stuart Foote 2026-02-08 23:21:50 UTC
sorry that was with the 2026-02-07 nightly of master against 26.8.0

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 28; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 20 Mihai Vasiliu 2026-02-08 23:26:15 UTC
(In reply to V Stuart Foote from comment #18)
> @Mihai, just went through the full list from comment 7 both os/DE color
> sense in Light or in Dark, with Appearance theme activated either a light or
> a dark appearance theme fully applies and the buttons in all the listed
> panels are readable.  Anywhere else, or can this be closed => Fixed

I reopened it as I found out other, more critical places with the same issue. Look at comment 13. They affect LO 26.2 as well. Thanks!
Comment 21 V Stuart Foote 2026-02-09 14:21:56 UTC
(In reply to Mihai Vasiliu from comment #20)
> (In reply to V Stuart Foote from comment #18)
> > @Mihai, just went through the full list from comment 7 both os/DE color
> > sense in Light or in Dark, with Appearance theme activated either a light or
> > a dark appearance theme fully applies and the buttons in all the listed
> > panels are readable.  Anywhere else, or can this be closed => Fixed
> 
> I reopened it as I found out other, more critical places with the same
> issue. Look at comment 13. They affect LO 26.2 as well. Thanks!

OK, I see there is *still* an issue with the tb listboxes. But the Sidebar listboxes now seem correct.

2026-02-07 tb103 nightly
Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: 680(Build:0)
CPU threads: 28; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded
Comment 22 Mihai Vasiliu 2026-02-09 18:17:25 UTC
(In reply to V Stuart Foote from comment #21)
> OK, I see there is *still* an issue with the tb listboxes. But the Sidebar
> listboxes now seem correct.

Yes, the Seidebar listboxes are ok. The issue is with the dropdown lists for font selection and paragraph style in both the toolbar and the Sidebar.
Comment 23 Commit Notification 2026-02-10 13:48:20 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/4c7ac52aa17ffb0d78909a50248a9bb179353107

Resolves tdf#170143 - Set ButtonTextColor on theme change (macOS)

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2026-02-14 07:38:09 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/75e20cc06017dfcca05dda13fa95dedfaab2af8c

Related tdf#170143 - Inconsistent theme colors on non-native controls

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Heiko Tietze 2026-02-14 07:43:33 UTC
(In reply to Mihai Vasiliu from comment #22)
> ...issue is with the dropdown lists for font selection and paragraph style
Both used the DialogTextColor on the non-native UI, ie. Windows, and I changed it to WindowTextColor.
Comment 26 Mihai Vasiliu 2026-02-14 12:17:28 UTC
Verified fixed in 

Version: 26.8.0.0.alpha0+ (X86_64)
Build ID: e18a815190140dd959ade58abf1b9311af10057e
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: ro-RO (ro_RO); UI: ro-RO
Calc: CL threaded

Thank you very much, Heiko!
Comment 27 Commit Notification 2026-02-17 07:34:51 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/ed057e68d5289d0fbba66eebeea98e8f31363fbd

Related tdf#170143 - Inconsistent theme colors on non-native controls

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2026-02-20 09:36:01 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-26-2-1":

https://git.libreoffice.org/core/commit/e079cb20f14e0d9d61bbcf865ab4915e3c0a43ba

Related tdf#170143 - Inconsistent theme colors on non-native controls

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Commit Notification 2026-02-23 09:41:11 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/e7eaeefeef74eea7c37063d89cd8d9679f302663

Related tdf#170143 - Stylist text color should consider themed colors

It will be available in 26.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Mihai Vasiliu 2026-02-23 16:19:44 UTC
Verified fixed in:

Version: 26.2.2.0.0+ (X86_64)
Build ID: 53746e60356f2afb16e7a06580ed809184a58861
CPU threads: 20; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: ro-RO (ro_RO); UI: en-US
Calc: CL threaded