Related tdf#170143 - Statusbar text color should consider themed colors

Change-Id: Id40c6172a557f56f757de49415f5abf586fcca72
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197086
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins